fix(frontend): redesign TaskDetailDrawer layout and increase width
- Increase drawer width to 50vw (was too narrow)
- Show parent task as TaskCard ABOVE accordion (not inside)
- Display subtasks as simple TaskCard list (not tree view)
- Remove indented tree layout from drawer context
- Fetch parent task when viewing subtask
- Subtasks section shows cards in space-y-2 layout

Layout now makes sense: parent card on top, accordion below with metadata/description/subtasks

--- a/style.css
+++ b/style.css
@@ -745,6 +745,10 @@ video {
   width: 1.25rem;
 }
 
+.w-\[50vw\] {
+  width: 50vw;
+}
+
 .w-full {
   width: 100%;
 }
@@ -1031,11 +1035,6 @@ video {
 
 .p-8 {
   padding: 2rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 
 .px-2 {
@@ -1442,11 +1441,6 @@ body {
 .hover\:bg-ctp-overlay1:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(127 132 156 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-ctp-surface0:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(49 50 68 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-ctp-surface1:hover {
